# jb-toc

./: .copier-answers.yml  .gitignore  .jupyter-releaser.toml  .prettierignore  CHANGELOG.md  README.md  RELEASE.md  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml  prep-release.yml  publish-release.yml
binder/: environment.yml  postBuild
jb_toc/: README.md  __init__.py  install.json  package.json  pyproject.toml
jb_toc/jb_toc/: __init__.py  handlers.py  titles.py
jb_toc/jb_toc/tests/: conftest.py
jb_toc/src/: jbtoc.ts
jb_toc/style/: index.css
jb_toc_frontend/: README.md  jest.config.js  package.json  pyproject.toml  tsconfig.test.json
jb_toc_frontend/labextension/: build_log.json  package.json
jb_toc_frontend/labextension/static/: lib_jbtoc_js.b5fafae563e7d60b810a.js  lib_jbtoc_js.b5fafae563e7d60b810a.js.map  remoteEntry.c157ffc44cb2d9bc3a4f.js  remoteEntry.c157ffc44cb2d9bc3a4f.js.map  style.js  style_index_js.0a6f3f0a7ce0df7230f4.js  style_index_js.0a6f3f0a7ce0df7230f4.js.map  vendors-node_modules_js-yaml_dist_js-yaml_mjs.2a2c05f916233c9330df.js  vendors-node_modules_js-yaml_dist_js-yaml_mjs.2a2c05f916233c9330df.js.map  vendors-node_modules_path-browserify_index_js.1ff1a798417ac9a38990.js  vendors-node_modules_path-browserify_index_js.1ff1a798417ac9a38990.js.map  vendors-node_modules_prettier_plugins_html_mjs.66f69716b9bfd033c763.js  vendors-node_modules_prettier_plugins_html_mjs.66f69716b9bfd033c763.js.map  vendors-node_modules_prettier_standalone_mjs.2d53618ceacff2fe3c27.js  vendors-node_modules_prettier_standalone_mjs.2d53618ceacff2fe3c27.js.map
jb_toc_frontend/src/: jb1.ts  jbtoc.ts
jb_toc_frontend/src/__tests__/: jbtoc.spec.ts  setupJest.ts
jb_toc_frontend/src/__tests__/fixtures/content/: header1.md  header2.ipynb  header2.md
jb_toc_frontend/src/__tests__/fixtures/content/my_dir/: header-placement.ipynb
jb_toc_frontend/src/__tests__/fixtures/jb-v2/: myst.yml
jb_toc_server/: LICENSE  README.md  package.json  pyproject.toml
jb_toc_server/jb_toc_server/: __init__.py  handlers.py
jb_toc_server/jb_toc_server/jupyter-config/jupyter_server_config.d/: jb_toc_server.json
scripts/: install_local_wheels.py  sync_version.py  version_cmd.py
src/: index.ts  jb1.ts  jb2.ts  jbtoc.ts
src/__tests__/: jb_toc.spec.ts
style/: index.css
ui-tests/: package.json
ui-tests/tests/: jb_toc.spec.ts
