[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project]
name = "jb_toc_frontend"
version = "1.0.5.dev0"
[tool.jupyter-releaser.options]
version_spec   = "major"
version_cmd  = 'bash -lc "python \"$(git rev-parse --show-toplevel)/scripts/sync_version.py\" --version $0"'
npm_command = 'bash -lc "jlpm --cwd \"$(git rev-parse --show-toplevel)/jb_toc_frontend\" install --immutable && jlpm --cwd \"$(git rev-parse --show-toplevel)/jb_toc_frontend\" build:prod"'
python_packages = ["jb_toc_frontend", "jb_toc"]
changelog_path = "CHANGELOG.md"

[tool.jupyter-releaser.hooks]
before-build-python = [
  "python scripts/sync_version.py",
  "echo synching version with before-build-python",
  'bash -lc "cd \"$(git rev-parse --show-toplevel)/jb_toc_frontend\" && jlpm clean:all"'
]
before-build-npm = [
  "python -m pip install 'jupyterlab>=4.0.0,<5'",
  "python scripts/sync_version.py",
  "echo synching version with before-build-npm",
  'bash -lc "cd \"$(git rev-parse --show-toplevel)/jb_toc_frontend\" && jlpm install --immutable"',
  'bash -lc "cd \"$(git rev-parse --show-toplevel)/jb_toc_frontend\" && jlpm build:prod"'
]
before-build-changelog = [
    "python scripts/sync_version.py",
    "echo synching version with before-build-changelog"
    ]
before-bump-version = [
  'bash -lc "echo synching version with before-bump-version"',
  'bash -lc "pwd"',
  'bash -lc "python \"$(git rev-parse --show-toplevel)/scripts/sync_version.py\""'
]
after-build-python = [
  # Make sure jb_toc_frontend build artifacts are in ./dist 
  "python - <<'PY'\nfrom pathlib import Path\nimport subprocess\nfrom packaging.version import Version\nwheels = sorted(Path('dist').glob('jb_toc_frontend-*.whl'), key=lambda p: Version(p.name.split('-')[1]))\nassert wheels, 'no jb_toc_frontend wheel found in dist/'\nsubprocess.check_call(['python','-m','pip','install','--no-index','--find-links','dist', str(wheels[-1])])\nPY",
  # Write a local-constraints file so pip knows to install jb_toc_frontend from the local wheel
  "bash -lc 'FRONTEND_WHEEL=$(ls -1 dist/jb_toc_frontend-*.whl | tail -n1); echo \"jb_toc_frontend @ file://$PWD/$FRONTEND_WHEEL\" > .local-constraints.txt'",
  # Install jb_toc_frontend from the local wheel, while still allowing it to search PyPi for dependencies
  "python -m pip install -c .local-constraints.txt ."
]
