[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project]
name = "jb-toc-frontend"

# Source of truth for both jb-toc and jb-toc-frontend packages: 
# All pyproject.toml and package.json files will be synched to this version.
# Set here prior to release.
version = "2.0.0dev"

[tool.jupyter-releaser.options]
version_cmd  = 'bash -lc "python \"$(git rev-parse --show-toplevel)/scripts/sync_version.py\" --version $0"'
npm_command = 'bash -lc "jlpm --cwd \"$(git rev-parse --show-toplevel)/jb_toc_frontend\" install --immutable && jlpm --cwd \"$(git rev-parse --show-toplevel)/jb_toc_frontend\" build:prod"'
python_packages = ["jb_toc_frontend", "jb_toc"]
changelog_path = "CHANGELOG.md"

[tool.jupyter-releaser.hooks]
before-build-python = [
  "python scripts/sync_version.py",
  "echo synching version with before-build-python",
  'bash -lc "cd \"$(git rev-parse --show-toplevel)/jb_toc_frontend\" && jlpm clean:all"'
]
after-build-python = [
  # jb-toc-frontend is a dependency of jb-toc (with version parity), so we install from 
  # local wheels during GitHub Actions
  "python scripts/install_local_wheels.py",
  # copy npm tarball to root/dist
  "bash -lc 'ROOT=$(git rev-parse --show-toplevel); DIST=\"$ROOT/dist\"; PKG=\"$ROOT/jb_toc_frontend\"; mkdir -p \"$DIST\"; cd \"$PKG\"; npm pack --pack-destination \"$DIST\" --silent; echo \"npm tarball(s) in $DIST:\"; ls -1 \"$DIST\"/*.tgz || true'"
]
before-build-npm = [
  "python -m pip install 'jupyterlab>=4.0.0,<5'",
  "python scripts/sync_version.py",
  "echo synching version with before-build-npm",
  'bash -lc "cd \"$(git rev-parse --show-toplevel)/jb_toc_frontend\" && jlpm install --immutable"',
  'bash -lc "cd \"$(git rev-parse --show-toplevel)/jb_toc_frontend\" && jlpm build:prod"'
]
before-build-changelog = [
    "python scripts/sync_version.py",
    "echo synching version with before-build-changelog"
    ]
before-bump-version = [
  'bash -lc "echo synching version with before-bump-version"',
  'bash -lc "pwd"',
  'bash -lc "python \"$(git rev-parse --show-toplevel)/scripts/sync_version.py\""'
]
